<resources>
    <string name="app_name">KnowBooks</string>

    <!--BookCatalog.java-->
    <string name="inventory_contains">The Books Inventory table contains </string>
    <string name="books">books.\n\n</string>

    <!--activity_book_catalog-->
    <string name="book_title">Title</string>
    <string name="book_title_hint">book title</string>
    <string name="author">Author</string>
    <string name="author_hint">book author</string>
    <string name="price">Price</string>
    <string name="price_hint">book price</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_hint">books quantity</string>
    <string name="supplier">Supplier Name</string>
    <string name="supplier_hint">supplier\'s name</string>
    <string name="supplier_num">Supplier Number</string>
    <string name="supplier_num_hint">supplier\'s number</string>

    <!--menu_book_catalog-->
    <string name="delete_all">delete all</string>

    <!--menu_book_editor-->
    <string name="save">save</string>
    <string name="delete">delete entry</string>


</resources>
